--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,19 @@ code {
     monospace;
 }
  
+a {
+  color: #61dafb;
+}
+
 a.active_class {
-  color: pink;
+  color: white;
   border-bottom: 1px solid red;
+}
+
+.menu_style {
+  width: 100%;
+  line-height: 60px;
+  background-color: #20232a;
+  display: flex;
+  justify-content: space-around;
 }
